# vxl-backend

./: .gitignore  Cargo.toml  README.md  TODO  compiling.txt  how_modules_work.txt
benches/: full_stack_benchmarks.rs  lexer_benchmarks.rs  no_compile_benchmarks.rs  parser_benchmarks.rs
src/: error.rs  lib.rs  macros.rs  processed_module.rs  resolver.rs  token.rs
src/ast/: expression.rs  macros.rs  mod.rs  statement.rs  type.rs  value.rs  variable.rs
src/ast/compilable/: compilable_components.rs  compilable_expression.rs  compilable_statement.rs  mod.rs
src/compiler/: builder.rs  compiler.rs  context.rs  mod.rs  operation.rs  values.rs
src/compiler/backends/: mod.rs
src/error/: lexer_error.rs  mod.rs  parser_error.rs  preprocessor_error.rs  resolver_error.rs  voxl_error.rs
src/lexer/: lexer.rs  mod.rs  tests.rs  token.rs
src/parser/: mod.rs  parser.rs  tests.rs
src/parser/ast/: ast.rs  expression.rs  macros.rs  mod.rs  statement.rs  type.rs  variable.rs
src/pre_processor/: command.rs  mod.rs  processor.rs
src/resolver/: mod.rs  tests.rs
src/resolver/no_std_tests/: expression_tests.rs  logic_tests.rs  mod.rs  statement_tests.rs
src/std_library/: mod.rs  stl_trait.rs
test_programs/basic_addition/: main.vxl
test_programs/structs/: main.vxl  my_struct.vxl
tests/: full_stack_tests.rs
