[package]
name = "vxl-backend"
version = "0.1.0"
authors = ["aidos9 <20310468+aidos9@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9"
hex = "0.4"
rand = "0.8"
paste = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "lexer_benchmarks"
harness = false

[[bench]]
name = "full_stack_benchmarks"
harness = false

[[bench]]
name = "parser_benchmarks"
harness = false

[[bench]]
name = "no_compile_benchmarks"
harness = false

[profile.dev]
split-debuginfo = "unpacked"