[package]
name = "vxl-backend"
version = "0.1.0"
authors = ["aidos9 <20310468+aidos9@users.noreply.github.com>"]
edition = "2021"

[features]
default = ["xvl-backend", "all-std_libraries"]

all-backends = ["xvl-backend", "vxlasm-backend"]
xvl-backend = ["vxl-iset"]
vxlasm-backend = ["vxl-iset", "vxlasm"]

all-std_libraries = ["unix-std_library", "voxeon_os-std_library", "windows-std_library"]
unix-std_library = []
voxeon_os-std_library = []
windows-std_library = []

test-intensive-short = ["test-intensive"]
test-intensive = []

[dependencies]
hex = "0.4"
paste = "1.0"
itertools = "0.10"
vxl-iset = { git = "https://github.com/Voxeon/vxl-iset.git", branch = "main", optional = true }
vxlasm = { git = "https://github.com/Voxeon/vxlasm.git", branch = "main", features = [], optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "lexer_benchmarks"
harness = false

[[bench]]
name = "full_stack_benchmarks"
harness = false

[[bench]]
name = "parser_benchmarks"
harness = false

[[bench]]
name = "no_compile_benchmarks"
harness = false
